// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PlansSkipButton should render 1`] = `
<div
  className="jetpack-connect__plans-nav-buttons"
>
  <button
    className="button"
    onClick={undefined}
    type="button"
  >
    Start with free
    <svg
      className="gridicon gridicons-arrow-right needs-offset-y"
      height={18}
      onClick={undefined}
      viewBox="0 0 24 24"
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M12 4l-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8-8-8z"
        />
      </g>
    </svg>
  </button>
</div>
`;

exports[`PlansSkipButton should render arrow-left in rtl mode 1`] = `
<div
  className="jetpack-connect__plans-nav-buttons"
>
  <button
    className="button"
    onClick={undefined}
    type="button"
  >
    Start with free
    <svg
      className="gridicon gridicons-arrow-left needs-offset-y"
      height={18}
      onClick={undefined}
      viewBox="0 0 24 24"
      width={18}
      xmlns="http://www.w3.org/2000/svg"
    >
      <g>
        <path
          d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
        />
      </g>
    </svg>
  </button>
</div>
`;
